--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -9,8 +9,5 @@
 }
 
 .button {
-  padding: 20px;
-  font-size: 16px;
-  border-radius: 8px;
-  cursor: pointer;
+  composes: user_info__button from "./UserPage.module.css";
 }
