--- a/src/styles/UserPage.module.css
+++ b/src/styles/UserPage.module.css
@@ -1,4 +1,79 @@
+.page_container {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
+  margin: 30px 0;
+}
+
+.user_info {
+  margin: 50px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.user_info__name {
+  font-size: 40px;
+  margin-bottom: 20px;
+}
+
+.user_info__website {
+  color: var(--link-color);
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.user_info__subscribe {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.user_info__button {
+  padding: 10px 22px;
+  min-width: 136px;
+  min-height: 44px;
+  border-radius: 15px;
+  border: none;
+  background-color: var(--button-color);
+  color: var(--font-color);
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+
+.user_info__button:hover,
+.user_info__button:active {
+  background-color: var(--button-hover-color);
+  transition: background-color 0.2s;
+}
+
+.subscribed {
+  padding: 10px 22px;
+  border-radius: 15px;
+  min-width: 136px;
+  min-height: 44px;
+  background-color: transparent;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background-color 0.2s;
+  border: 1px solid var(--link-color);
+  color: var(--link-color);
+}
+
+.gallery__header {
+  font-size: 25px;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+.gallery__container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 150px);
 }
